test/types/range/deitz/test_range_iterate_error.chpl
for i in zip(5..8,..4) do
  writeln(i);
